@@ -3,7 +3,7 @@
 // UI startup
 var UI = new rcube_mail_ui();
 $(document).ready(function(){
-	UI.set('errortitle', '<roundcube:label name="errortitle" />');
+	UI.set('errortitle', '<roundcube:label name="errortitle" quoting="javascript" />');
 	UI.init();
 });
 
